testing/tests/ui/macro_named_argument.stderr
error: the previous template error derives from
 --> tests/ui/macro_named_argument.rs:4:21
  |
4 |   #[template(source = "{%- macro thrice(param1, param2) -%}
  |  _____________________^
5 | | {{ param1 }} {{ param2 }}
6 | | {%- endmacro -%}
7 | |
8 | | {%- call thrice(param1=2, param3=3) -%}", ext = "html")]
  | |________________________________________^

error: the previous template error derives from
  --> tests/ui/macro_named_argument.rs:12:21
   |
12 |   #[template(source = "{%- macro thrice(param1, param2) -%}
   |  _____________________^
13 | | {{ param1 }} {{ param2 }}
14 | | {%- endmacro -%}
15 | |
16 | | {%- call thrice(param1=2, param1=3) -%}", ext = "html")]
   | |________________________________________^

error: the previous template error derives from
  --> tests/ui/macro_named_argument.rs:21:21
   |
21 |   #[template(source = "{%- macro thrice(param1, param2) -%}
   |  _____________________^
22 | | {{ param1 }} {{ param2 }}
23 | | {%- endmacro -%}
24 | |
25 | | {%- call thrice(3, param1=2) | filter(param1=12) -%}", ext = "html")]
   | |_____________________________________________________^

error: the previous template error derives from
  --> tests/ui/macro_named_argument.rs:30:21
   |
30 |   #[template(source = "{%- macro thrice(param1, param2) -%}
   |  _____________________^
31 | | {{ param1 }} {{ param2 }}
32 | | {%- endmacro -%}
33 | | {%- call thrice(param1=2, 3) -%}", ext = "html")]
   | |_________________________________^

error: the previous template error derives from
  --> tests/ui/macro_named_argument.rs:38:21
   |
38 |   #[template(source = "{%- macro thrice(param1, param2) -%}
   |  _____________________^
39 | | {{ param1 }} {{ param2 }}
40 | | {%- endmacro -%}
41 | | {%- call thrice(3, param1=2) -%}", ext = "html")]
   | |_________________________________^
